rendered, no validations

--- a/index.html
+++ b/index.html
@@ -10,57 +10,8 @@
 </head>
 <body>
     <h2 class="practiceH2">Pasirinkite praktikos vieta</h1>
-    <main class="section-box">
-        <div class="practice-box health-psy">
-            <i class="practice-icon fa-solid fa-hospital"></i>
-            <div class="left-side">
-                <h3 class="place">Karoliniskiu Poliklinika</h3>
-                <p class="leader"><b>Vadovas:</b> Petras Petraitis</p>
-                <p class="direction"><b>Kryptis:</b> Sveikatos psichologija</p>
-            </div>
-        </div>
-        <div class="practice-box health-psy">
-            <i class="practice-icon fa-solid fa-hospital"></i>
-            <div class="left-side">
-                <h3 class="place">Sanatorija "Pušynas"</h3>
-                <p class="leader"><b>Vadovas:</b> Jonas Jonaitis</p>
-                <p class="direction"><b>Kryptis:</b> Sveikatos psichologija</p>
-            </div>
-        </div>
-        <div class="practice-box forensic">
-            <i class="practice-icon fa-solid fa-building-shield"></i>
-            <div class="left-side">
-                <h3 class="place">Ažuolyno pataisos namai</h3>
-                <p class="leader"><b>Vadovas:</b>> Ona Onaitienė</p>
-                <p class="direction"><b>Kryptis:</b> Teisės psichologija</p>
-            </div>
-        </div>
-        <div class="practice-box educational">
-            <i class="practice-icon fa-solid fa-school"></i>
-            <div class="left-side">
-                <h3 class="place">Lietaus gimnazija</h3>
-                <p class="leader"><b>Vadovas:</b>Bronė Bronaitytė</p>
-                <p class="direction"><b>Kryptis:</b> Edukacinė Psichologija</p>
-            </div>
-        </div>
-        <div class="practice-box organizational">
-            <i class="practice-icon fa-solid fa-sitemap"></i>
-            <div class="left-side">
-                <h3 class="place">Lietuvos Paštas</h3>
-                <p class="leader"><b>Vadovas:</b>Paštas Paštetas</p>
-                <p class="direction"><b>Kryptis:</b> Organizacine psichologija</p>
-            </div>
-        </div>
-        <div class="practice-box scientific">
-            <i class="practice-icon fa-solid fa-atom"></i>
-            <div class="left-side">
-                <h3 class="place">Vilniau Universitetas</h3>
-                <p class="leader"><b>Vadovas:</b>Vilius Viliauskas</p>
-                <p class="direction"><b>Kryptis:</b>Moksline praktika</p>
-            </div>
-        </div>
-
+    <main class="practice-section-box" id="practice-section-box">
     </main>
-    <script src="./js/index.js" type="modules" defer></script>
+    <script src="./js/index.js" type="module" defer></script>
 </body>
 </html>
